# phosphor-time-manager

./: .clang-format  .clang-tidy  .upstream-base-commit  bmc_epoch.cpp  bmc_epoch.hpp  main.cpp  manager.cpp  manager.hpp  meson.build  meson.options  meson_options.txt  utils.cpp  utils.hpp  xyz.openbmc_project.Time.Manager.service
oem/nvidia/: constants.hpp  erot_time_manager.cpp  erot_time_manager.hpp  handler.hpp  instance_id.hpp  main.cpp  mctp_endpoint_discovery.cpp  mctp_endpoint_discovery.hpp  mctp_vdm_completion_codes.hpp  meson.build  request.hpp  socket_handler.cpp  socket_handler.hpp  socket_manager.hpp  types.hpp  utils.cpp  utils.hpp
oem/nvidia/services/: nvidia-erot-time-manager.service
test/: TestBmcEpoch.cpp
